[package]
name = "webgl-timelines"
version = "0.0.1"
authors = ["Joe Gasewicz joegasewicz@gmail.com"]
edition = "2021"
license = "MIT"
repository = "https://github.com/joegasewicz/webgl-timelines"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
]

